tests/ui/aggregate_types/fail/avg_wrong_width.stderr
error[E0271]: type mismatch resolving `<AvgRow as RowColumnList<Row<'r>>>::Columns == Cons<Option<f64>, Nil>`
  --> tests/ui/aggregate_types/fail/avg_wrong_width.rs:29:10
   |
29 |         .all()
   |          ^^^ type mismatch resolving `<AvgRow as RowColumnList<Row<'r>>>::Columns == Cons<Option<f64>, Nil>`
   |
note: expected this to be `Cons<Option<f64>, Nil>`
  --> tests/ui/aggregate_types/fail/avg_wrong_width.rs:17:10
   |
17 | #[derive(SQLiteFromRow)]
   |          ^^^^^^^^^^^^^
   = note: expected struct `Cons<Option<f64>, Nil>`
              found struct `Cons<Option<f32>, Nil>`
   = note: required for `SelectCols<(AliasedExpr<SQLExpr<'_, SQLiteValue<'_>, drizzle::sqlite::types::Real, drizzle::core::expr::Null, Agg>>,)>` to implement `for<'r> MarkerColumnCountValid<Row<'r>, (Option<f64>,), AvgRow>`
   = note: 1 redundant requirement hidden
   = note: required for `Scoped<SelectCols<(AliasedExpr<SQLExpr<'_, SQLiteValue<'_>, drizzle::sqlite::types::Real, drizzle::core::expr::Null, Agg>>,)>, Cons<User, Nil>>` to implement `for<'r> MarkerColumnCountValid<Row<'r>, (Option<f64>,), AvgRow>`
note: required by a bound in `drizzle::builder::sqlite::rusqlite::<impl drizzle::builder::sqlite::common::DrizzleBuilder<'a, Connection, S, drizzle::sqlite::builder::QueryBuilder<'b, Schema, State, Table, Mk, Rw>, State>>::all`
  --> src/builder/sqlite/rusqlite/mod.rs
   |
   |     pub fn all<R, Proof>(self) -> drizzle_core::error::Result<Vec<R>>
   |            --- required by a bound in this associated function
...
   |             + drizzle_core::row::MarkerColumnCountValid<::rusqlite::Row<'r>, Rw, R>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `drizzle::builder::sqlite::rusqlite::<impl DrizzleBuilder<'a, Connection, S, QueryBuilder<'b, Schema, State, Table, Mk, Rw>, State>>::all`
   = note: this error originates in the derive macro `SQLiteFromRow` (in Nightly builds, run with -Z macro-backtrace for more info)
